--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:bookshop": "bookshop-browser",
-    "dev:11ty": "eleventy --serve --watch --incremental",
-    "start": "run-p dev:*"
+    "bookshop-sass:build": "bookshop-sass -b component-library -o src/assets/styles/bookshop.css",
+    "bookshop-sass:watch": "bookshop-sass -b component-library -o src/assets/styles/bookshop.css -w",
+    "bookshop:browser": "bookshop-browser",
+    "bookshop:new": "npx @bookshop/init --component",
+
+    "eleventy:build": "eleventy",
+    "eleventy:watch": "ELEVENTY_ENV=development eleventy --serve",
+    "start": "npm-run-all bookshop-sass:build --parallel bookshop-sass:watch bookshop:browser eleventy:watch"
+
   },
   "repository": {
     "type": "git",
@@ -20,13 +26,15 @@
   },
   "homepage": "https://github.com/CloudCannon/small-business-template-eleventy#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "@bookshop/sass": "^3.6.5"
   },
   "dependencies": {
     "@bookshop/browser": "3.6.5",
     "@bookshop/eleventy-bookshop": "3.6.5",
     "@bookshop/eleventy-engine": "3.6.5",
     "@bookshop/generate": "3.6.5",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "npm-run-all": "^4.1.5"
   }
 }
