--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "bookshop-sass:watch": "bookshop-sass -b component-library -o src/assets/styles/bookshop.css -w",
     "bookshop:browser": "bookshop-browser",
     "bookshop:new": "npx @bookshop/init --component",
-
     "eleventy:build": "eleventy",
     "eleventy:watch": "ELEVENTY_ENV=development eleventy --serve",
     "start": "npm-run-all bookshop-sass:build --parallel bookshop-sass:watch bookshop:browser eleventy:watch"
-
   },
   "repository": {
     "type": "git",
@@ -35,6 +33,7 @@
     "@bookshop/eleventy-engine": "3.6.5",
     "@bookshop/generate": "3.6.5",
     "js-yaml": "^4.1.0",
+    "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5"
   }
 }
