--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bookshop-sass:build": "bookshop-sass -b component-library -o src/assets/styles/bookshop.css",
-    "bookshop-sass:watch": "bookshop-sass -b component-library -o src/assets/styles/bookshop.css -w",
+    "bookshop-sass:build": "bookshop-sass -b component-library -o css/bookshop.css",
+    "bookshop-sass:watch": "bookshop-sass -b component-library -o css/bookshop.css -w",
     "bookshop:browser": "bookshop-browser",
     "bookshop:new": "npx @bookshop/init --component",
     "eleventy:build": "eleventy",
     "eleventy:watch": "ELEVENTY_ENV=development eleventy --serve",
-    "start": "npm-run-all bookshop-sass:build --parallel bookshop-sass:watch bookshop:browser eleventy:watch"
+    "sass:watch": "sass --no-source-map --watch src/assets/styles:css",
+    "sass:build": "sass --no-source-map src/assets/styles:css",
+
+    "start": "npm-run-all sass:build bookshop-sass:build --parallel bookshop-sass:watch sass:watch bookshop:browser eleventy:watch"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,7 @@
     "@bookshop/generate": "3.6.5",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.66.1"
   }
 }
