--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -16,6 +16,7 @@ collections_config:
     disable_add_folder: false
     disable_file_actions: false
   pages:
+    path: pages
     output: true
     filter: strict
     icon: notes
