--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -23,7 +23,11 @@ collections_config:
     disable_add: false
     disable_add_folder: false
     disable_file_actions: false
-_inputs: {}
+_inputs:
+  layout:
+    type: text
+    hidden: true
+    cascade: true
 _select_data: {}
 _structures:
   content_blocks:
