--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -25,9 +25,9 @@ collections_config:
     disable_file_actions: false
 _inputs:
   layout:
-    type: text
     hidden: true
-    cascade: true
+  eleventyExcludeFromCollections:
+    hidden: true
 _select_data: {}
 _structures:
   content_blocks:
