--- a/src/_data/fonts.yml
+++ b/src/_data/fonts.yml
@@ -1,6 +1,9 @@
 google_fonts:
   - font_title: Questrial
   - font_title: Source Sans Pro
+headings_font:
+content_font:
+
 _inputs:
   font_title:
     comment: Enter the font title as displayed in Google Fonts
