--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -46,5 +46,6 @@ _structures:
         _inputs: {}
 _editables: {}
 data_config:
-  fonts: true
+  fonts:
+    google_fonts: true
 timezone: Etc/UTC
