--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -46,6 +46,5 @@ _structures:
         _inputs: {}
 _editables: {}
 data_config:
-  fonts:
-    google_fonts: true
+  fonts: true
 timezone: Etc/UTC
