--- a/component-library/components/generic/rich-text/rich-text.bookshop.yml
+++ b/component-library/components/generic/rich-text/rich-text.bookshop.yml
@@ -1,10 +1,9 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - content_blocks
-  label: "Rich-text"
+  label: "Rich Text Editor"
   description:
-  icon:
+  icon: edit_note
   tags: []
 
 # Defines the structure of this component, as well as the default values
