--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "generate:styles": "node src/assets/js/generate-styles.js",
     "bookshop-sass:build": "bookshop-sass -b component-library -o css/bookshop.css",
     "bookshop-sass:watch": "bookshop-sass -b component-library -o css/bookshop.css -w",
     "bookshop:browser": "bookshop-browser",
     "bookshop:new": "npx @bookshop/init --component",
-    "eleventy:build": "eleventy",
+    "eleventy:build": "generate:styles eleventy",
     "eleventy:watch": "ELEVENTY_ENV=development eleventy --serve",
     "sass:watch": "sass --no-source-map --watch src/assets/styles:css",
     "sass:build": "sass --no-source-map src/assets/styles:css",
-    "start": "npm-run-all sass:build bookshop-sass:build --parallel bookshop-sass:watch sass:watch bookshop:browser eleventy:watch"
+    "start": "npm-run-all sass:build bookshop-sass:build --parallel generate:styles bookshop-sass:watch sass:watch bookshop:browser eleventy:watch"
   },
   "repository": {
     "type": "git",
