--- a/component-library/components/generic/rich-text/rich-text.bookshop.yml
+++ b/component-library/components/generic/rich-text/rich-text.bookshop.yml
@@ -1,6 +1,7 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
+    - content_blocks
   label: "Rich Text Editor"
   description:
   icon: edit_note
