--- a/component-library/components/generic/video/video.bookshop.yml
+++ b/component-library/components/generic/video/video.bookshop.yml
@@ -20,5 +20,8 @@ preview:
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
   video_source: 
-    - "Youtube"
-    - "Vimeo"
+    type: select 
+    options:
+      values:
+        - "YouTube"
+        - "Vimeo"
