--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "homepage": "https://github.com/CloudCannon/small-business-template-eleventy#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-img": "^3.1.0",
     "@bookshop/sass": "^3.6.5",
-    "eleventy-plugin-svg-contents": "^0.7.0"
+    "eleventy-plugin-svg-contents": "^0.7.0",
+    "outdent": "^0.8.0"
   },
   "dependencies": {
     "@bookshop/browser": "3.6.5",
