feat: adds icon color inputs

--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -47,3 +47,7 @@ _inputs:
         - "linkedin"
         - "X"
         - "instagram"
+  icon_fill_color:
+    type: color 
+  icon_hover_color:
+    type: color
