refactor: renames keys

--- a/component-library/components/generic/video/video.bookshop.yml
+++ b/component-library/components/generic/video/video.bookshop.yml
@@ -11,17 +11,17 @@ spec:
 blueprint:
   video_source:
   video_url:
-  image:
-    src: 
-    alt: 
+  fallback_image:
+    image_src: 
+    alt_description: 
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   video_source: "YouTube"
   video_url: https://www.youtube.com/watch?v=LeqKIzeZel4
-  image: 
-    src: https://placekitten.com/1000
-    alt: "A placeholder image"
+  fallback_image: 
+    image_src: https://placekitten.com/1000
+    alt_description: "A placeholder image"
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
@@ -33,6 +33,6 @@ _inputs:
         - "Vimeo"
   video_url: 
     type: url 
-  src: 
+  image_src: 
     type: image 
-    alt: text
+    alt_description: text
