--- a/component-library/components/generic/icon/icon.bookshop.yml
+++ b/component-library/components/generic/icon/icon.bookshop.yml
@@ -1,9 +1,8 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - content_blocks
   label: "Icon"
-  description: Icons
+  description: A icon (from https://heroicons.com/) with an optional border and customisable color
   icon: bolt
   tags: []
 
