--- a/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
+++ b/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
@@ -9,7 +9,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  icon_orientation: Horizontal
+  layout: horizontal
   text: 
   icon: bookshop:generic/icon
 
@@ -19,9 +19,10 @@ preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  icon_orientation:
+  layout:
     type: select
+    comment: The layout of the icon and text together
     options:
       values:
-        - Horizontal
-        - Stacked
+        - inline
+        - stacked
