--- a/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
+++ b/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
@@ -9,7 +9,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  layout: horizontal
+  layout: inline
   text: 
   icon: bookshop:generic/icon
 
