Fix: only include icon once it exists to prevent error

--- a/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
+++ b/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   layout: inline
   text: 
-  icon: bookshop:generic/icon
+  icon: bookshop:generic/icon!
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
