Refactor: rename component to be more editor friendly

--- a/component-library/components/generic/text-block/text-block.bookshop.yml
+++ b/component-library/components/generic/text-block/text-block.bookshop.yml
@@ -2,8 +2,8 @@
 spec:
   structures:
     - content_blocks
-  label: "Rich Text Editor"
-  description:
+  label: "Text block"
+  description: A block of rich text (text, headings, links etc)
   icon: edit_note
   tags: []
 
