Feat: add spacing and color styling

--- a/component-library/components/generic/text-block/text-block.bookshop.yml
+++ b/component-library/components/generic/text-block/text-block.bookshop.yml
@@ -36,7 +36,9 @@ preview:
     nulli, et ubi procul astris tumulos alimentaque post dryadas! Animal possit
     deficit vestro: *neci carina* veniet agnovique popularis, Amphissos, quem
     oculis Hebre auro.<sub>1</sub>
+    
 
+    Ense signum foret paucaqueexhalari
     * Coniugis genibus o meosque silvas
 
     * Sacros imagine dimittit
