--- a/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
+++ b/component-library/components/generic/labelled-icon/labelled-icon.bookshop.yml
@@ -9,7 +9,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  layout: inline
+  arrangement: inline
   text: 
   icon: bookshop:generic/icon!
 
@@ -19,7 +19,7 @@ preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  layout:
+  arrangement:
     type: select
     comment: The layout of the icon and text together
     options:
