--- a/component-library/components/generic/video/video.bookshop.yml
+++ b/component-library/components/generic/video/video.bookshop.yml
@@ -1,7 +1,6 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - content_blocks
   label: "Video"
   description: "Simple video component"
   icon: ondemand_videogit
@@ -36,4 +35,4 @@ _inputs:
   image_path: 
     type: image
   fallback_image:
-    comment: This is used while the video is loading/if the video fails to load
+    comment: This is used while the video is loading
