Add bookshop / CloudCannon defaults.

--- a/component-library/components/generic/component-heading/component-heading.bookshop.yml
+++ b/component-library/components/generic/component-heading/component-heading.bookshop.yml
@@ -9,9 +9,9 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  eyebrow_headline:
-  primary_heading:
-  text_alignment:
+  eyebrow_headline: Eyebrow Heading
+  primary_heading: Primary Heading
+  text_alignment: left
 
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
