--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -1,5 +1,5 @@
-navigation_heading:
-logo_image: '/assets/images/Logo.png'
+navigation_heading: Logo
+logo_image: ''
 navigation_items:
   - label: About Us
     link_url: /about
