--- a/component-library/components/simple/image-card/image-card.bookshop.yml
+++ b/component-library/components/simple/image-card/image-card.bookshop.yml
@@ -9,11 +9,12 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
+  is_image: false
+  image: 
   icon: bookshop:generic/icon
   heading: bookshop:generic/component-heading
   content: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
   link_url:
-  image:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
