--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -1,6 +1,6 @@
 logo_image: null
 logo_text:
-  name: Primera Mesa
+  text: Primera Mesa
   font: Birthstone Bounce
 navigation_items:
   - label: About Us
