--- a/component-library/components/simple/google-map-embed/google-map-embed.bookshop.yml
+++ b/component-library/components/simple/google-map-embed/google-map-embed.bookshop.yml
@@ -4,14 +4,14 @@ spec:
     - content_blocks
   label: "Google Map Embed"
   description:
-  icon:
+  icon: explore
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
   latitude:
   longitude:
-  zoom_level:
+  zoom_level: 9
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
