--- a/component-library/components/generic/image/image.bookshop.yml
+++ b/component-library/components/generic/image/image.bookshop.yml
@@ -9,12 +9,11 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  url1: "Hello World!"
-  url2: "Hello World!"
-  url2: "Hello World!"
+  image_path: 
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
+  image_path: src/assets/images/Testimonial--background-feature.png
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
