--- a/component-library/components/generic/image/image.bookshop.yml
+++ b/component-library/components/generic/image/image.bookshop.yml
@@ -10,10 +10,12 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   image_path: 
+  image_alt:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   image_path: src/assets/images/Testimonial--background-feature.png
+  image_alt: A woman laughing
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
