--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -47,6 +47,8 @@ preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  social_media_links:
+    type: array
   svg_icon:
     type: image
     options:
