Test: define structure

--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -49,6 +49,14 @@ preview:
 _inputs:
   social_media_links:
     type: array
+    options:
+      structures:
+        values:
+          icon: link
+          - value:
+              link_url:
+              svg_icon:
+
   svg_icon:
     type: image
     options:
