Test: structure configuration

--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -52,7 +52,9 @@ _inputs:
     options:
       structures:
         values:
-          - value:
+          - label: Social Media Link
+            icon: link
+            value:
               link_url:
               svg_icon:
   svg_icon:
