Test: only allow SVG image type

--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -60,6 +60,9 @@ _inputs:
             _inputs:
               svg_icon:
                 type: image
+                options:
+                  accepts_mime_types:
+                    - image/svg+xml
   svg_icon:
     type: image
   icon_fill_color:
