Feat: add social icons to nav

--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -60,11 +60,10 @@ _inputs:
             _inputs:
               svg_icon:
                 type: image
+                comment: This input is restricted to only allow images with type SVG
                 options:
                   accepts_mime_types:
                     - image/svg+xml
-  svg_icon:
-    type: image
   icon_fill_color:
     type: color 
   icon_hover_color:
