Feat: configure background colour

--- a/component-library/components/sections/price-list/price-list.bookshop.yml
+++ b/component-library/components/sections/price-list/price-list.bookshop.yml
@@ -64,3 +64,9 @@ _inputs:
       values:
         - left
         - center
+  background_variant:
+    type: choice
+    options:
+      values:
+        - dark
+        - light
