--- a/component-library/components/generic/video/video.bookshop.yml
+++ b/component-library/components/generic/video/video.bookshop.yml
@@ -1,6 +1,7 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
+    - asset_blocks
   label: "Video"
   description: "Simple video component"
   icon: ondemand_videogit
