--- a/component-library/components/structure/left-right-block/left-right-block.bookshop.yml
+++ b/component-library/components/structure/left-right-block/left-right-block.bookshop.yml
@@ -28,7 +28,8 @@ _inputs:
   orientation:
     type: select
     options:
-      - Right
-      - Left
+      values:
+        - Left
+        - Right  
   content:
     type: markdown
