--- a/component-library/components/structure/left-right-block/left-right-block.bookshop.yml
+++ b/component-library/components/structure/left-right-block/left-right-block.bookshop.yml
@@ -18,6 +18,7 @@ blueprint:
   styles:
     orientation:
     image:
+    background_variant: "Dark"
 
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
@@ -42,6 +43,7 @@ preview:
   styles:
     orientation: Left
     image: http://placekitten.com/500/500
+    background_variant: "Dark"
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
@@ -53,3 +55,9 @@ _inputs:
         - Right  
   content:
     type: markdown
+  background_variant:
+    type: select
+    options:
+      values:
+        - 'Dark'
+        - 'Light'
