--- a/component-library/components/generic/image/image.bookshop.yml
+++ b/component-library/components/generic/image/image.bookshop.yml
@@ -1,10 +1,9 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - content_blocks
   label: "Image"
   description:
-  icon:
+  icon: image
   tags: []
 
 # Defines the structure of this component, as well as the default values
